<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/app_logo_description"
        android:src="@drawable/ic_logo_retina"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintBottom_toTopOf="@+id/button_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/accent_blue" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="@color/text_primary"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/textViewSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_subtitle"
        android:textColor="@color/text_secondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/button_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFindObject"
        style="@style/MainMenuButton"
        android:layout_marginHorizontal="24dp"
        android:contentDescription="@string/desc_find_object"
        android:text="@string/btn_find_object_text"
        app:drawableStartCompat="@drawable/ic_find_object"
        app:layout_constraintTop_toTopOf="@+id/button_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnReadCurrency"
        style="@style/MainMenuButton"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        android:contentDescription="@string/desc_read_currency"
        android:text="@string/btn_read_currency_text"
        app:drawableStartCompat="@drawable/ic_read_currency"
        app:layout_constraintTop_toBottomOf="@+id/btnFindObject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnReadText"
        style="@style/MainMenuButton"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        android:contentDescription="@string/desc_read_text"
        android:text="@string/btn_read_text_text"
        app:drawableStartCompat="@drawable/ic_read_text"
        app:layout_constraintTop_toBottomOf="@+id/btnReadCurrency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnObstacleAlert"
        style="@style/MainMenuButton"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        android:contentDescription="@string/desc_obstacle_alert"
        android:text="@string/btn_obstacle_alert_text"
        app:drawableStartCompat="@drawable/ic_obstacle_alert"
        app:layout_constraintTop_toBottomOf="@+id/btnReadText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>